fix: increase gap for navigation bar
For better visual experience

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,7 +16,7 @@
 
     .nav-bar {
         display: flex;
-        gap: 30px;
+        gap: 48px;
     }
 
     .nav-bar a {
